# ordered-goals-planner

./: .gitignore  CMakeLists.txt  README.md  TODO.md
app/: CMakeLists.txt  main.cpp
cmake/: orderedgoalsplanner-config.cmake
data/move_and_tell/: problem.pddl
include/orderedgoalsplanner/: orderedgoalsplanner.hpp
src/: orderedgoalsplanner.cpp
src/algo/: actiondataforparallelisation.cpp  converttoparallelplan.cpp  converttoparallelplan.hpp  notifyactiondone.cpp  notifyactiondone.hpp
src/types/: action.cpp  actioninvocation.cpp  actioninvocationwithgoal.cpp  condition.cpp  condtionstovalue.cpp  domain.cpp  (+28 more)
tests/: CMakeLists.txt
tests/src/: main.cpp  test_callbacks.cpp  test_condition.cpp  test_conditional_effects_requirement.cpp  test_duration.cpp  test_evaluate.cpp  test_event_with_forall_goal.cpp  test_examples.cpp  test_existential_preconditions_requirement.cpp  test_extractminmaxvalueforfacts.cpp  test_fact.cpp  test_factoptionalstoid.cpp  test_facttoconditions.cpp  test_fluent_requirement.cpp  test_fluentinparameter.cpp  test_goalscache.cpp  test_negative_preconditions_requirement.cpp  test_numeric_objectives.cpp  test_ontology.cpp  test_ordered_goals_requirement.cpp  test_parallelplan.cpp  test_pddl_serialization.cpp  test_planner.cpp  test_plannerWithSingleType.cpp  test_problems_in_data.cpp  test_setofentities.cpp  test_setoffacts.cpp  test_successionscache.cpp  test_universal_preconditions_requirement.cpp  test_util.cpp  test_worldstate.cpp
tests/src/docexamples/: test_planningDummyExample.cpp  test_planningExampleWithAPreconditionSolve.cpp
(+61 files in other folders)
